# music-recommender-system

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 02-eda-songs-v2.ipynb  Spotify Collaborative Filtering.ipynb  content based recommendation system.ipynb  eda_songs_v3.ipynb  spotify-collaborative-filtering-v2.ipynb
spotify/: __init__.py  app.py  content_filtering.py  data_cleaning.py  dataset.py  features.py  plots.py
spotify/modeling/: predict.py  train.py
